--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Release history for Module-Data
 
 {{$NEXT}}
+ [Dependencies::Changed]
+ - Runtime requires : Path::ScanINC 0 -> 0.002
 
 0.003 2012-04-10T09:11:18Z
  [Dependencies::New]
