Build results of c935ae9 (on master)

--- a/README
+++ b/README
@@ -55,7 +55,7 @@ METHODS
       $mod->require->new( %args );
 
   path
-    A Path::Class::File with the absolute path to the found module.
+    A Path::Tiny object with the absolute path to the found module.
 
             my $md = Module::Data->new( 'Foo' );
             my $path = $md->path;
