--- a/Changes
+++ b/Changes
@@ -1,6 +1,19 @@
 Release history for Module-Data
 
 {{$NEXT}}
+ [00 Minor]
+ - Internals reimplemented in Path::Tiny
+ - Trial release to give end users a bit of warning, because Path::Class
+   objects were previously emitted.
+
+ [Dependencies::Added / runtime requires]
+ - Path::Tiny
+
+ [Dependencies::Removed / runtime requires]
+ - Path::Class::File
+
+ [Dependencies::Removed / test requires]
+ - Path::Class
 
 0.007 2013-11-20T13:09:23Z
  [00 BugFix]
