--- a/Changes
+++ b/Changes
@@ -7,11 +7,14 @@ Release history for Module-Data
 
  [Dependencies::Stats]
  - Dependencies changed since 0.012, see misc/*.deps* for details
- - build: ↑1
- - configure: +1 ↑1
- - develop: +23 ↑3 -12 (suggests: +2 -1)
+ - build: -1
+ - configure: +2 -1 (recommends: +1)
+ - develop: +24 ↑3 -14 (recommends: +1, suggests: +2 -1)
  - runtime: (recommends: +2)
- - test: +3 ↑1 (recommends: +1)
+ - test: +3 ↓1 (recommends: +3)
+
+ [Tooling]
+ - Switched from Module::Build to EUMM. WARNING: This could break some vendors.
 
 0.012 2013-11-25T08:27:23Z
  [Bugfix]
